--- a/indexStyle.css
+++ b/indexStyle.css
@@ -3,7 +3,7 @@
 }
 .wrapper{
  width: 1920px;
- margin: 50px auto;
+ margin:  50px auto;
 }
 .header{
  background-color: aqua;
@@ -14,8 +14,25 @@
 .top_menu{
  background-color: darkgoldenrod;
  width: 100%;
- height: 50px;
+ height: 200px;
  margin-top: 5px;
+ position: relative;
+}
+.knopka{
+ display: none;
+ width: 32px;
+ height: 21px;
+ top: 2px;
+ left: 6px;
+ background-color: blue;
+ border-radius: 2px;
+ position: absolute;
+}
+.lan{
+ width: 29px;
+ height: 3px;
+ background-color: darkolivegreen;
+ margin: 3px auto;
 }
 .sideLeft{
  background-color: brown;
@@ -24,6 +41,14 @@
  margin-top: 5px;
  padding: 1px 0;
  float: left;
+}
+.bar{
+ background-color: burlywood;
+ border-radius: 5px;
+ border: 1px solid coral;
+ margin: 3px auto;
+ width: 95%;
+ height: 110px;
 }
 .content{
  background-color: antiquewhite;
