--- a/media.css
+++ b/media.css
@@ -1,5 +1,44 @@
-@media only screen and (max-width:992px) {
+*{
+ transition: all .2s;
+}
+@media only screen and (max-width:756px) {
  .wapper{
-  width: 750px;
+  width: 450px;
+ }
+ .header{
+  background-color: rgb(92, 200, 200);
+  height: 100px;
+  border-radius: 5px;
+ }
+ .top_menu{
+  background-color: rgb(121, 98, 42);
+  height: 150px;
+  margin-top: 5px;
+ }
+ .knopka{
+  display: block;
+ }
+ .sideLeft{
+  background-color: brown;
+  width: 100%;
+  height: 354px;
+  margin-top: 5px;
+  float: none;
+ }
+ .bar{
+  background-color: chartreuse;
+  border-radius: 2px;
+  width: 98%;
+  height: 110px;
+ }
+ .content{
+  background-color:rgb(129, 104, 73);
+  width: 100%;
+  float: none;
+ }
+ .footer{
+  background-color: rgb(46, 38, 102);
+  margin-top: 5px;
+  height: 70px;
  }
 }
